# dexlize-node

./: .gitignore  Cargo.toml  README.md
frame/dexlize/: Cargo.toml  README.md
frame/generic-asset-gateway/: Cargo.toml  README.md
frame/generic-asset-gateway/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: chain_spec.rs  service.rs
